--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,6 +1,9 @@
 {
     "type": "module",
     "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mysql": "^2.18.1",
         "nodemon": "^2.0.7"
     }
 }
