--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,6 +4,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "uuid": "^8.3.2"
     }
 }
