--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
+    "use-debounce": "^6.0.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
