--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@types/react": "^17.0.3",
     "axios": "^0.21.1",
     "callstack": "^1.0.1",
     "expo": "~41.0.0",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-native": "^0.64.2",
     "typescript": "~4.0.0"
   },
   "private": true
