--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,6 +1,7 @@
 {
     "type": "module",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mysql": "^2.18.1",
