--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,11 +1,23 @@
 {
-    "type": "module",
     "dependencies": {
+        "@types/bcrypt": "^3.0.1",
+        "@types/express": "^4.17.11",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/mysql": "^2.15.18",
+        "@types/node": "^14.14.41",
+        "@types/redis": "^2.8.28",
+        "@types/uuid": "^8.3.0",
         "bcrypt": "^5.0.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.7",
+        "redis": "^3.1.1",
+        "tslint": "^6.1.3",
         "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "typescript": "^4.2.4"
     }
 }
