--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,11 +13,13 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@types/axios": "^0.14.0",
     "@types/react": "^17.0.3",
     "axios": "^0.21.1",
     "callstack": "^1.0.1",
     "expo": "~41.0.0",
     "expo-linear-gradient": "~9.1.0",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
