--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -5,6 +5,8 @@
         "@types/jsonwebtoken": "^8.5.1",
         "@types/mysql": "^2.15.18",
         "@types/node": "^14.14.41",
+        "@types/nodemailer": "^6.4.1",
+        "@types/randomstring": "^1.1.6",
         "@types/redis": "^2.8.28",
         "@types/uuid": "^8.3.0",
         "bcrypt": "^5.0.1",
@@ -12,6 +14,8 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
+        "nodemailer": "^6.6.0",
+        "randomstring": "^1.2.1",
         "redis": "^3.1.1",
         "tslint": "^6.1.3",
         "uuid": "^8.3.2"
