--- a/frontEnd/tsconfig.json
+++ b/frontEnd/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "noImplicitAny": false
-  },
+    "strict": true
+  }
 }
