--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -12,6 +12,7 @@
         "bcrypt": "^5.0.1",
         "dotenv": "^9.0.1",
         "express": "^4.17.1",
+        "handlebars": "^4.7.7",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "nodemailer": "^6.6.0",
