--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/axios": "^0.14.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.16",
     "callstack": "^1.0.1",
     "expo": "~41.0.1",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.6.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
