--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
+    "@apollo/react-hooks": "^4.0.0",
     "@expo/vector-icons": "^12.0.5",
     "@hookform/resolvers": "^2.5.1",
     "@react-native-community/masked-view": "0.1.10",
@@ -25,6 +27,8 @@
     "expo-linear-gradient": "^9.1.0",
     "expo-secure-store": "^10.1.0",
     "expo-status-bar": "^1.0.4",
+    "graphql": "^15.5.0",
+    "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.6.0",
