--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -10,6 +10,7 @@
         "@types/randomstring": "^1.1.6",
         "@types/redis": "^2.8.28",
         "@types/uuid": "^8.3.0",
+        "apollo-errors": "^1.9.0",
         "apollo-server-express": "^2.25.0",
         "bcrypt": "^5.0.1",
         "dotenv": "^9.0.1",
