--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,4 +1,8 @@
 {
+    "scripts": {
+        "watch": "tsc -w",
+        "dev": "nodemon -q -w dist dist/app.js"
+    },
     "dependencies": {
         "@types/bcrypt": "^3.0.1",
         "@types/express": "^4.17.11",
@@ -8,7 +12,7 @@
         "@types/node": "^14.14.41",
         "@types/nodemailer": "^6.4.1",
         "@types/randomstring": "^1.1.6",
-        "@types/redis": "^2.8.28",
+        "@types/redis": "^2.8.29",
         "@types/uuid": "^8.3.0",
         "apollo-errors": "^1.9.0",
         "apollo-server-express": "^2.25.0",
