Add last changes

--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/axios": "^0.14.0",
+    "@types/mongodb": "^3.6.18",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.16",
     "callstack": "^1.0.1",
@@ -29,6 +30,7 @@
     "expo-secure-store": "^10.1.0",
     "expo-status-bar": "^1.0.4",
     "graphql": "^15.5.0",
+    "mongodb": "^3.6.9",
     "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
